<resources>
    <string name="app_name">oo</string>
    <string name="todo">todo</string>
    <string name="about">APOUT\n</string>
    <string name="call_us">"CALL "</string>
    <string name="exit">EXIT</string>
    <string name="go">GO</string>
    <string name="not_all_of_us_trust_their_cheap_and_fake_products_that_may_harm_our_skin_due_to_their_longevity_we_need_their_products_and_everything_related_to_them_at_affordable_prices_our_app_will_help_users_search_for_a_more_cost_effective_alternative_to_high_quality_makeup_setting_it_apart_from_some_well_known_apps_that_may_cost_users_exorbitant_prices_there_will_be_many_good_affordable_brands_available_in_our_app_providing_you_with_solutions_that_can_help_you_achieve_a_better_look_on_a_limited_budget">Not all of us trust their cheap and fake products that may harm our skin due to their longevity. We need their products, and everything related to them, at affordable prices. Our app will help users search for a more cost-effective alternative to high-quality makeup, setting it apart from some well-known apps that may cost users exorbitant prices. There will be many good affordable brands available in our app, providing you with solutions that can help you achieve a better look on a limited budget.</string>
    <string name="my_name_maha_alqhtany">MY NAME MAHA ALQHTANY</string>
</resources>