<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FDEAEE"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/bak3"
            app:srcCompat="@mipmap/bak3" />

        <Button
            android:id="@+id/aboutbutton"
            android:layout_width="101dp"
            android:layout_height="89dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="293dp"
            android:layout_marginEnd="279dp"
            android:text="@string/about"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="368dp" />

        <Button
            android:id="@+id/callbutton"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="159dp"
            android:layout_marginTop="291dp"
            android:layout_marginEnd="162dp"
            android:text="@string/call_us"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="368dp" />

        <Button
            android:id="@+id/exitbutton"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="273dp"
            android:layout_marginTop="293dp"
            android:layout_marginEnd="50dp"
            android:text="@string/exit"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="437dp" />


        <Button
            android:id="@+id/gobutton"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="159dp"
            android:layout_marginTop="410dp"
            android:layout_marginEnd="161dp"
            android:text="@string/go"
            android:textColor="@color/black" />


    </RelativeLayout>

</LinearLayout>